@@ -1,3 +1,8 @@
+Thu Mar 07 00:34:46 GMT 2013  Aarsh Shah <aarshkshah1992@gmail.com>
+
+	* tests/api_anydb.cc: Added tradweight4 testcase to test TradWeight
+	  with an RSet for weighting documents.
+
 Wed Mar 06 08:55:12 GMT 2013  Olly Betts <olly@survex.com>
 
 	* HACKING: gs package has been replaced by ghostscript package in
